# intervals

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  TODO.txt  vcpkg.json
ci/: azure-pipelines.yml  vcpkg.json
examples/: CMakeLists.txt  interpolate-linear.cpp  interpolate-nn.cpp  interpolation.cpp  preprocess.cpp  simple1.cpp  simple2.cpp  simple3.cpp
examples/doc/: sample.cpp
examples/with-CPM/: CMakeLists.txt  README.md  main.cpp
extra/: InstallNatvis-VS2019.bat  intervals.natvis
include/intervals/: algorithm.hpp  bound-algebra.hpp  concepts.hpp  interval.hpp  logic.hpp  math.hpp  set.hpp  sign.hpp  type_traits.hpp  utility.hpp
include/intervals/detail/: algorithm.hpp  concepts-internal.hpp  concepts.hpp  interval.hpp  math.hpp  set.hpp  sign.hpp  type_traits.hpp
src/: CMakeLists.txt  intervals.natvis
test/: CMakeLists.txt  test-algorithm.cpp  test-bound-algebra.cpp  test-interval.cpp  test-set.cpp  test-sign.cpp
